# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1549 2015/05/08 14:09:09 mpagano Exp $

*gentoo-sources-3.10.77 (08 May 2015)

  08 May 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.77.ebuild:
  Linux patch 3.10.76. Linuxpatch 3.10.77

*gentoo-sources-3.14.41 (08 May 2015)

  08 May 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.41.ebuild:
  Linux patch 3.14.41

*gentoo-sources-4.0.2 (07 May 2015)

  07 May 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-4.0.2.ebuild:
  Linux patch 4.0.2. Fix for lz4 compression. Thanks to Christian Xia. See bug
  #546422. BFQ patchset for 4.0, v7r7. Fix for incremental 4.0.2 patch.

  07 May 2015; Jack Morgan <jmorgan@gentoo.org> gentoo-sources-3.18.11.ebuild:
  sparc stable wrt #540866

*gentoo-sources-3.19.7 (07 May 2015)

  07 May 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.7.ebuild:
  Linux patch 3.19.7

*gentoo-sources-3.12.42 (05 May 2015)

  05 May 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.12.42.ebuild:
  Linux patch 3.12.41. Linux patch 3.12.42.

  01 May 2015; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.18.11.ebuild:
  Stable for PPC64 (bug #540866).

*gentoo-sources-3.14.40 (29 Apr 2015)

  29 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.40.ebuild:
  Linux patch 3.14.40

*gentoo-sources-3.19.6 (29 Apr 2015)

  29 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.6.ebuild:
  Linux patch 3.19.6

*gentoo-sources-4.0.1 (29 Apr 2015)

  29 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-4.0.1.ebuild:
  Linux patch 4.0.1

*gentoo-sources-3.18.12 (27 Apr 2015)

  27 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.18.12.ebuild:
  Linux patch 3.18.12

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> gentoo-sources-3.18.11.ebuild:
  ppc stable wrt bug #540866
