@@ -64,6 +64,9 @@ DIST genpatches-3.19-7.extras.tar.xz 16288 SHA256 3801105359570ea1ddeb1f17440dd2
 DIST genpatches-3.19-8.base.tar.xz 256296 SHA256 ade8b1764335431156c6aaaf70aab4ff0f5daf20cf5a7f244b50a02d24852dc9 SHA512 3bd00333eafd4d266bb6f41bde5cd2ae782159dcd2595eb622835899a0875319d89e750948b1b9e9ec5e0fbb4a202e0168d462eb28df9801899c59c8b1154b7d WHIRLPOOL b72bce4c9eb499f6f224cc7641957a459c4a4820d349aeefcd3ebc2f9aeae47c002c7ce0f4455721a7ace2f2fb7a99d3eb6909a3d899938944ea46bf8fb9075b
 DIST genpatches-3.19-8.experimental.tar.xz 61608 SHA256 edb5c0aa3c46cb5578bcc1cec524ed706d9d4c06a2ac1d3447f67ce9d24df6cb SHA512 a425928a1103465a469883ee90d7a49a041445b651fbd4815d57950cc39cf16082c816373b347bb8d9cbabe2b70705ac5409d3f10fb32f9a6ade0ad6da39e57f WHIRLPOOL 1a6789f4e4d1887d417ce7b54f5badf7825aef4ad8bdf29f399c84f6ced8862dde1f073bf093c61276b0ec8308b4c7b106a2704b0d6589488e89f0e6f0e461b0
 DIST genpatches-3.19-8.extras.tar.xz 16280 SHA256 f0b77c7754741f000933a1450c39027c509ca66b44e78add44b100b02e415e5c SHA512 764e704d43573b80604f090b35b4c5913cc8d8abcb8f94590621df879668fdd0607db1a711a6fb24dd7b2ad709dff1110381e4b8072ad435ef7356639d8baacf WHIRLPOOL 6e8243526c27642cade7d1e9b36c6453c7a5ea63e99abae77ebd866365543930d1ee685b7a447f38e40bc8cfcbe84b01cbc8f5a6e443fe732b8e14ff3487a45d
+DIST genpatches-3.19-9.base.tar.xz 257836 SHA256 94ca8760c25b14e705dbdc4584c78b4ba71655bcb3529c9fed3a24c41e144231 SHA512 118bd7d89bd7652ae44cd01042f865a846668ac2976f2344e9f72d6dadb4c3fdfda738e7a971656519831cbfdb6cc07a8c9b4513c88be707c3eb707d6e75a8f8 WHIRLPOOL 38df4344680cb3d38c384ac6a7ec2dfaf591cccca3795a1a1150cbf410ec4e4e8affa816c5dc3448b0310dd2b9c12e220aa6b85820fd9c68c8441ad6c2846e73
+DIST genpatches-3.19-9.experimental.tar.xz 61632 SHA256 c1668cb0ebe2c04a5f9d837cd0b42378ec9c1c53cacc4b02272462bd9e773c88 SHA512 86738abd9ce9eb007c96388a18710d8005760f5f2c36d12388af6d88cea2b60f81c2debe8d3e0af8f4ac83619a4797aa5a77b73c83adca1cbc6f397005c66561 WHIRLPOOL 8c8c5931b69a99106f38309df1367db16f6935357db1ed48a2fbeff5c266ac4801803485446d5a8a292c1c29d851c1b32dcc8ce161c6646227b9f1e75ae7621b
+DIST genpatches-3.19-9.extras.tar.xz 16280 SHA256 f0b77c7754741f000933a1450c39027c509ca66b44e78add44b100b02e415e5c SHA512 764e704d43573b80604f090b35b4c5913cc8d8abcb8f94590621df879668fdd0607db1a711a6fb24dd7b2ad709dff1110381e4b8072ad435ef7356639d8baacf WHIRLPOOL 6e8243526c27642cade7d1e9b36c6453c7a5ea63e99abae77ebd866365543930d1ee685b7a447f38e40bc8cfcbe84b01cbc8f5a6e443fe732b8e14ff3487a45d
 DIST genpatches-3.4-89.base.tar.xz 1274612 SHA256 67f1fc28b1a48e201d011f543aa8cbb2cbf596557cde7e66e68c40310639d327 SHA512 2e3ff2b26a0a4f7bbabda2b1845660ccfaead481c408af461b3bd8965a9657b99a5aac80fd8735d6eb6b1e0e9e5699bb5f9cb9c45d6845b37abfd17c546ca4bf WHIRLPOOL 78af99b652223aca35ac94e6e9d7d696b17cfd5690183deb9e0eda831925866145ec8ddf6e5e9e9f6e39a215af0e3b25c2165878557737997816106ad6b69eb5
 DIST genpatches-3.4-89.extras.tar.xz 18240 SHA256 c93ee7aa7b095db85cb12f990a2d344e87f4caaee64cdd8e85336c483459b69d SHA512 936c2baf1b5015913a1dc2f43353cd8286a5749f5deb382c0cf569d9ca302b9f85c6ba678d77156c5d54c87ba2f3147751fe4622fd6738b2d1b55b0f44c09c34 WHIRLPOOL 7a8d218525509e1a1eddba81341cb20ac06a4b4120d2e43a92d0855584e38eb39ce497538931d4972e2406bd48ce77f2613aea3a407b0f884936fa9ff22fa6fc
 DIST genpatches-4.0-1.base.tar.xz 3720 SHA256 e1abe1fdf42dda7e0e5aef9843bc5d240416c6fbde8dcca44e2a43b5e5f6c2f1 SHA512 3d67dba40ff8501d258e9a30996d70be5e614661f76fd4978c5837f16b42f1ac9015010e7b6a9826ed20c0723547d19ffafd54dcface2a41b0a95d23aa72dcbb WHIRLPOOL 791a508360e23160a7ba9dbc3f6c311727cb638693fa63354e60a847aa0bed7ea6c2d8b0e2605d1cfdcc77101caab9c0b8886a5fe71effa03dbe47895f44e3bd
@@ -105,19 +108,20 @@ EBUILD gentoo-sources-3.19.4.ebuild 899 SHA256 2f4ecac8071c2f8d4bacbccf8eed53e35
 EBUILD gentoo-sources-3.19.5.ebuild 899 SHA256 19b7861b4e329fb38d61cc5d860cacfe09e2a13f54c6b0e9a6c3e5973f6ec076 SHA512 73c8d41ce026cf2428db2691ccbff336f03a70981ecc425312a5fbc816c5c4d5e7697f7b2c85ba18bd98382adc445aa5054a45ea31875dbdce5fce400df02039 WHIRLPOOL d9a6b8b5177cae75b55d53cd6cbc605841b81d91ca298a357e7fee932f4c8f02ae54cbcd7ca33a5e9a467c1ab968c7649c7d213ca4c043302f93ea8fe1fc1f08
 EBUILD gentoo-sources-3.19.6.ebuild 899 SHA256 44ece87821e3894ae884a3030de6781fbbceec4b1db9a58d9eb7f19fc6d683e5 SHA512 c519149129c7782988409c87502af0cfbe09fa4d6eef558b049448240849c71c0bbcf50d1a1c015bbd34be2cb271395dfc9982f542e5504ff72cc8c75eb1fb39 WHIRLPOOL 546b8fbbc09ebe31846ecd64394842e6750a6e1e316cce2eb903e733ecf39091850cf0c461a58f4e6425eb2d54576cb8064a01d5ab372e23acfd95bdf795a020
 EBUILD gentoo-sources-3.19.7.ebuild 899 SHA256 5db1a3647084ac7ebf433dd635e9cc57b61a5a0f825e6227f7333452f8db1e24 SHA512 9c825fd660d14a2cc700a9d7c5d4d8f1f18cf5ddece93c82db63a6497e7bdb9050aac045d86d4eff9c565d8ad80b057883e7f5beb5aaa1b6f8bb6280946e56fe WHIRLPOOL 7d708be1696c9bbc0dedfca9b568541a2d0c9e2febf6fd2de432187be4f92b861caea0751d3fe0781087159e5438c4281bf659340f037f32ea0b54917bd7fc7f
+EBUILD gentoo-sources-3.19.8.ebuild 899 SHA256 d606bc532d4bb2a7d601e1bebeaf82d4c1500a37e6e00f3a42fab2d91dc0aaff SHA512 4b7e15a55ddaffa7766d505ad1ad1d22726aa794f54b41dfa177f6527c743fe2c26896c747669406e4c51f59f71906f88f3d409e04dd227a373a1b075ce85266 WHIRLPOOL 5eee484aa37434bfd0949e97602ebd8c06eb97e364d6de82e5f74e2589428f5d90bc5ef764762c635bdd266a8afc6893c727a81a00e145da2f1752040f4e1cc7
 EBUILD gentoo-sources-3.4.106.ebuild 862 SHA256 a0f88d28e7fedea5985d0d3ab5e5fa2ca669376811e388417a777a1dc5a979b8 SHA512 2f91e205bc16edd5da3c730635bc492c664484fd8f6895068fdce55d1276c68dacfd8da3084e3445a7bcafd429c19e304407c4973214cace5799a65aedd7e245 WHIRLPOOL 3ea611ce7f0502f38891722b8814d99b55b4a9cdde9aca61a35c20af3a7b7089d69aaba7dcdfcb17101b685c5af9d1bfe5c37f87a8edffb1017b41765d452c7e
 EBUILD gentoo-sources-3.4.9999.ebuild 2262 SHA256 5c40a937692469c313f62bc8aa6909f78b65d98b7e8865e66c4b4fd9f51c40aa SHA512 f896d03460b4c2a470a94cc250d4e4970a7e7f6293e36cb407ecd767f147ef858790a4fb5535d4aa9ea24edc5cee8e87c529c72b32fd4016c0d74dfcc8711caa WHIRLPOOL 7d8c2db2f783641e744d4ade8328a2f2869edab5a8c7291a35e14a497dbcfb5b5430f86fba6ef91645433fafaae21497a851519f7f44234e3dbe39b161c61d5e
 EBUILD gentoo-sources-4.0.0.ebuild 898 SHA256 b414a4348a54e3e7c1aee9ffd0e4d0c7a1e25270ce8989a182085d069c2ab361 SHA512 90c81b8922a70f313ca933c952e1feca72c89d67683a20520fcd663dec0a9cc0b9d72b696a689b081b056e3c755ae3eef97e19ad8d763c672cfd08444f97fea9 WHIRLPOOL 584622e3b9ba7a399be43aed851e5083444d7765cf3721b61536e12e4074777211afc0ddbe5b463943995bf9f28e872315c1b7ad50013939c1efc8e60ff17a1d
 EBUILD gentoo-sources-4.0.1.ebuild 898 SHA256 7287382a327b47ddd4888115badabc72dd20e4e1dd54f9c3367d810668233774 SHA512 506944fdc587794b7c773c1e90f2e64bba0304e6e7bf440eec953023b9134263e34c6fc213da7fbea185e10fd8fd492b0d017ff2782c7c65ca0e96516fb0f570 WHIRLPOOL c526eb66446b10f6ff8a2ffc3d69e429e3a1fa3d62e5a8e5f9212340dceb8a8cc48341da952d569a7e7ab4d087802bc3cae0403c59a0e8a431ca530f4297a6fb
 EBUILD gentoo-sources-4.0.2.ebuild 898 SHA256 4e94de42236e50228f097d716e7548672da6fd3a8fedb8edb9f126ac2043d190 SHA512 4979046cee027bfaaded917e6fc2ada66f0a65a948f7272bd398059985737172e53c5527f21d3be90015964673109a8f56c3f0da1227e53c7a1dfb169c4eb52b WHIRLPOOL 709984e8d25841ac93ae3ae92868553aa03226aef9048a9e32a560691c763218473d04e516b2e7ec06aca08234507aa7c67a06d61e6491946f6b5aaa7a75d822
-MISC ChangeLog 108906 SHA256 adfef0b638ed2e66c29884144830c5a877214eee7e9092b852bb3e51d81224fa SHA512 6de8695dbc4f61e10a4654702466ea282c1768979b9d01736afa5f6cccb0b46b9c5fd2b0f1a247520c25a598e782835ff8e6364085671f54310f5692e3ce5754 WHIRLPOOL fd8efd9c65d980f98fad2557db58f7fb3a7947b0a8d4c12a58dbfbbf43a565da91e9d1bd3a837799eec0aa9e31f71dda23db0fd033407f9bce8d94b25668fa78
+MISC ChangeLog 109039 SHA256 9abf0fc1e500467ff4a627ccb5b242b36269761d708a9a2276ae71b525d2e9ff SHA512 6dd2f9130dfb2bf2c2461f1c270c226f911db476f42e4fb15bbc304b4711694004ddca144b581d0216e6f4ac81349d63f35de539caa8cbdf52951de75ce4413c WHIRLPOOL b6eb4d5a10cb30feae5d680ed2c9d5dbdf9b86ffc8435d44717acf3e7252cebb8190805c41c24b189f2966adcf3a716d913bf8b106ad62dabc3fd09bbd763509
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 512 SHA256 80143273f4462ac67194f8ef90706e5ebf65f3f30ff153b7ee19d2c155f49f7b SHA512 6262ba3cbc6480081a195024fc752ad0df27afe9b71d626d759f747a52a2a181d114379e463bd8741a843622556c1e46820e535e8fbe71e2790828370d70c5f0 WHIRLPOOL b4430c0590efa2c5cbfc85fed1386943f4c8d101dfc07a76ba79c37b1fe2fe4db21f65b58186e1cad1ea3987292c2ea0251f0e2017be018c020f7e2309b57bd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVMwNUACgkQPDPGULV25ON0swCfcgaH/aDO7UrWemKu0cybVvz9
-r/oAn2FGIDBjSomXhjXgPCLWFwNg7dl3
-=FemG
+iEYEAREIAAYFAlVRNEwACgkQPDPGULV25OMqygCfbTW5Q6ndWcjOfwSL6qhgT9ch
+j7UAoMGLJUneEbQy/YhWJztnO959cEfL
+=lqev
 -----END PGP SIGNATURE-----
